# CinemaBot

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
src/: __init__.py  bot.py
src/api/: __init__.py  api.py
src/database/: __init__.py  database_users.py
src/utils/: __init__.py  keyboards.py  logger.py
tests/: test.txt
